src/css/contact-modal.css
body.modal-open {
  overflow: hidden;
  pointer-events: auto;
  opacity: 1;
}

.modal-backdrop {
  position: fixed;
  inset: 0;
  background-color: rgba(0, 0, 0, 0.25);
  z-index: 999;
  display: none;
}

/* Mobile styles */

.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 90%;
  max-width: 343px;
  background: var(--main-background);
  color: var(--primary-color);
  font: var(--main-font);
  transform: translate(-50%, -50%);
  transition:
    transform var(--primary-transition),
    opacity var(--primary-transition);
  z-index: 1000;
  padding: 64px 16px;
  border-radius: 16px;
  display: none;
  pointer-events: auto;
}

.modal-close {
  position: absolute;
  top: 16px;
  right: 16px;
  padding: 0;
  height: 32px;
  border: none;
  background: none;
  cursor: pointer;
  fill: var(--primary-color);
}

.modal h2 {
  text-align: center;
  font-size: 32px;
  font-weight: 700;
  margin-bottom: 16px;
}

.modal-subtitle {
  text-align: center;
  margin-bottom: 48px;
  font-size: 24px;
  line-height: 1.4;
  letter-spacing: -0.01em;
}

#registerForm {
  display: flex;
  align-items: stretch;
  justify-content: flex-start;
  flex-direction: column;
  gap: 24px;
}

.form-group {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
  gap: 8px;
}

form label {
  display: block;
}

input,
textarea {
  width: 100%;
  max-width: 311px;
  background: var(--input-background-color);
  margin-top: 4px;
  border: 1px solid rgba(11, 5, 0, 0.15);
  border-radius: 4px;
  padding: 8px 12px;
  resize: none;
  outline: none;
  box-shadow: none;
}

input:hover,
textarea:hover {
  border: 1px solid rgba(11, 5, 0, 0.15);
  outline: none;
  box-shadow: none;
}

input:focus,
textarea:focus {
  border: 1px solid rgba(11, 5, 0, 0.6);
  outline: none;
  box-shadow: none;
}

input:focus::placeholder,
textarea:focus::placeholder {
  opacity: 0;
}

input:invalid {
  box-shadow: none;
}

input.error,
textarea.error {
  border-color: var(--error-color);
  background-color: var(--input-background-color);
  color: var(--error-color);
}

input.error::placeholder,
textarea.error::placeholder {
  opacity: 0;
}

.submit-btn {
  width: 100%;
  padding: 12px 24px;
  background-color: var(--btn-normal-bcg-color);
  color: var(--white-color);
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.submit-btn:hover,
.submit-btn:focus {
  width: 100%;
  border: 1px solid var(--btn-hover-bcg-color);
  background-color: var(--btn-hover-bcg-color);
  color: var(--white-color);
}

.submit-btn:active {
  width: 100%;
  border: 1px solid var(--btn-active-bcg-color);
  background-color: var(--btn-active-bcg-color);
  color: var(--white-color);
}

/* Tablet styles */

@media screen and (min-width: 768px) {
  .modal {
    max-width: 704px;
    padding: 64px 32px;
  }

  .modal h2 {
    margin-bottom: 16px;
    font-weight: 600;
    font-size: 48px;
    line-height: 1.2;
    letter-spacing: -0.01em;
  }

  input,
  textarea {
    max-width: 640px;
  }

  .submit-btn {
    width: 342px;
    margin: 0 auto;
  }

  .submit-btn:hover,
  .submit-btn:focus,
  .submit-btn:active {
    width: 342px;
  }
}

/* Desctop styles */

@media screen and (min-width: 1440px) {
  .modal {
    max-width: 866px;
    padding: 64px;
  }

  input,
  textarea {
    max-width: 738px;
  }

  .submit-btn {
    width: 342px;
    margin: 0 auto;
  }
}

